# sm64pc

./: CMakeLists.txt  TODO.txt
actors/: CMakeLists.txt
include/: CMakeLists.txt  platform_info.h  types.h
include/PR/: gbi.h  os_libc.h
levels/: CMakeLists.txt
lib/: CMakeLists.txt
lib/src/: ldiv.c
lib/src/math/: cosf.c  llmuldiv.c  sinf.c
src/audio/: CMakeLists.txt
src/buffers/: CMakeLists.txt
src/engine/: math_util.c  math_util.h
src/game/: CMakeLists.txt  camera.c  ingame_menu.c  paintings.c  save_file.c  shadow.c
src/pc/: CMakeLists.txt  cliopts.c  configfile.c  platform.c  platform.h
src/pc/audio/: audio_sdl.c
src/pc/controller/: controller_sdl.c
src/pc/fs/: fs.c  fs_packtype_zip.c
src/pc/gfx/: gfx_opengl.c  gfx_opengl_legacy.c  gfx_pc.c  gfx_sdl2.c
textures/: CMakeLists.txt
tools/: CMakeLists.txt  aifc_decode.c  aiff_extract_codebook.c  binary_to_c_array.py  extract_data_for_mio.c  output_level_headers.py  skyconv.c  textconv.c  utils.c
tools/n64graphics_ci_dir/: n64graphics_ci.c
tools/sdk-tools/adpcm/: vadpcm.h  vadpcm_enc.c
